working on mobile bug

--- a/nc-news/src/App.css
+++ b/nc-news/src/App.css
@@ -422,6 +422,8 @@ nav {
   -webkit-tap-highlight-color: transparent;
   -webkit-appearance: none;
   touch-action: manipulation;
+  will-change: contents;
+  transform: translateZ(0);
 }
 
 /* ─── Nav Buttons  */
